<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>metu_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rhipheus114@gmail.com">rhip</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
